[incubator-kie-issues#1460] Working unit tests. Working external example